# PQVPN

./: .gitignore  IMPLEMENTATION_PLAN_ANTIGRAVITY.md  PQVPN.docx  README.md  bundle.js  bundle.py  docx_text.txt  extract_text.ps1  implementation_plan.md  read_docx.ps1
client/: fix_icons.cjs  index.html  package-lock.json  package.json
client/src/: App.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: commands.rs  config.rs  dns.rs  killswitch.rs  lib.rs  tunnel.rs
client/src-tauri/src/pqc/: mod.rs  psk_provider.rs
client/src-tauri/src/wireguard/: manager.rs  mod.rs  windows.rs
client/src/components/: ConnectButton.tsx  ConnectionInfo.tsx  Icons.tsx  IntegrityMonitor.tsx  ModeSelector.tsx  ServerSelector.tsx  StatusBadge.tsx  TrafficStats.tsx
client/src/styles/: index.css
docx_extracted/docProps/: app.xml  core.xml
docx_extracted/word/: document.xml  fontTable.xml  numbering.xml  settings.xml  styles.xml
files_extracted/: RUNBOOK_TONIGHT.md  provider.go  psk_provider.rs  wireguard_windows.rs
scripts/: gen_certs.sh  gen_wg_keys.sh  setup_server.sh
server/: go.mod  go.sum  pqvpnd.service  restart.sh  setup_server.sh
server/cmd/pqvpnd/: main.go
server/internal/api/: handlers.go  middleware.go  server.go
server/internal/peers/: models.go  store.go
server/internal/psk/: provider.go
server/internal/wg/: manager.go
