[package]
name = "client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Post-quantum cryptography
ml-kem = "0.2"

# Key derivation
hkdf = "0.12"
sha2 = "0.10"

# TLS with cert pinning
rustls = "0.23"
rustls-pki-types = "1"

# Utilities
base64 = "0.22"
rand = "0.8"
anyhow = "1"
tokio = { version = "1", features = ["rt", "time", "sync", "macros", "net", "io-util"] }
windows-dpapi = "0.2.0"
zeroize = { version = "1", features = ["zeroize_derive"] }
dirs = "5.0"
winreg = "0.55"
